CI - Add Deploy job

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,17 @@
 name: Deploy
 
-on: push
-
-defaults:
-  runs-on: ubuntu-latest
+on:
+  push:
+    branches:
+      - master
+      - ci
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Set up QEMU
@@ -19,3 +24,18 @@ jobs:
         with:
           push: true
           tags: reg.istry.cz/github-actions-demo
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - uses: azure/setup-helm@v1
+      - env:
+          KUBECONFIG_BASE64: ${{ secrets.KUBECONFIG_BASE64 }}
+        run: echo $KUBECONFIG_BASE64 | base64 --decode > .kubeconfig
+      - run: helm repo add ondrejsika https://helm.oxs.cz
+      - run: cat .kubeconfig
+      - env:
+          KUBECONFIG: .kubeconfig
+        run: helm upgrade --install github-actions-demo ondrejsika/one-image --set image=reg.istry.cz/github-actions-demo --set host=github-actions-demo.k8s.sikademo.com
